<resources>
    <string name="app_name">施工现场数据采集</string>
    <string name="app_setting">设置</string>
    <string name="app_about">关于...</string>
    <string name="app_logout">退出</string>
    <string name="bt_sure">确定</string>
    <string name="bt_cancle">取消</string>
    <string name="sure_exit">确定退出吗?</string>
    <string name="login_username">用户名：</string>
    <string name="login_password">密\u3000码：</string>
    <string name="login_login">登录</string>
    <string name="login_remeber_account">记住密码</string>
    <string name="login_autologin">自动登录</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_second_folder">施工短节预制</string>
    <string name="work_cold_bend_prefabricated">施工冷弯管预制</string>
    <string name="constrction_joint">施工焊口</string>
    <string name="constrction_repair">施工返修口</string>
    <string name="constrction_cut">施工割口</string>
    <string name="ic_drive_file">&#xe077;</string>
    <string name="ic_folder">&#xe09d;</string>
    <string name="list_">列表</string>
    <string name="saves">保存</string>
    <string name="again">再录一条</string>
    <string name="head_update_config">更新配置</string>
    <string name="head_upload_data">上传数据</string>
    <string name="head_update_version">版本更新</string>
    <string name="head_exit_sys">退出系统</string>
    <string name="pipline_info">管线信息</string>
    <string name="waiting">待上报</string>
    <string name="reported">已上报</string>
    <string name="approve">已审核</string>
    <string name="jiaoyan">已校验</string>
    <string name="all">全部</string>
    <string name="approve_login">监理审核登陆</string>
    <string name="report">上报</string>
    <string name="query">查询</string>
    <string name="del">删除</string>
    <string name="update">修改</string>
    <string name="del_report">撤销上报</string>
    <string name="jinli_check">校验</string>
    <string name="approved">审核</string>
    <string name="beizhu">请填写备注</string>
    <string name="ip">服务器路径</string>
    <string name="input_ip">请输入服务器路径</string>
    <string name="update_ip">"配置已经修改,请重新登陆"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="qrcode">二维码扫描</string>
    <string name="select_image">图片选择</string>
    <string name="usr_name_not_null">用户名不能为空！</string>
    <string name="usr_pwd_not_null">密码不能为空！</string>
    <string name="report_success">上报成功</string>
    <string name="report_failed">上报失败</string>
    <string name="del_success">删除成功</string>
    <string name="de_failed">删除失败</string>
    <string name="query_success">查询成功</string>
    <string name="query_failed">查询失败</string>
    <string name="approve_success">审核成功</string>
    <string name="approve_failed">审核失败</string>
    <string name="unapprove">审核不合格</string>
    <string name="jiaoyan_success">校验成功</string>
    <string name="jiaoyan_failed">校验失败</string>
    <string name="jiaoyan_Unqualified">校验不合格</string>
    <string name="withdraw_failed">撤回失败</string>
    <string name="withdraw_success">撤回成功</string>
    <string name="check_success">抽查成功</string>
    <string name="check_failed">抽查失败</string>
    <string name="have_no_data">没有更多数据了</string>
    <string name="connection_failed">网络连接失败</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="common_list_approve">监理审核</string>
    <string name="common_cancle">取消</string>
    <string name="common_ok">确认</string>
    <string name="need_select_data">请选择要审核的记录</string>
    <string name="need_one_select_data">请选择一条需要审核的记录</string>
    <string name="need_one_jiaoyan_data">请选择一条需要校验的记录</string>
    <string name="need_del_data">请选择删除记录</string>
    <string name="need_del_one_data">请选择一条需要删除的记录</string>
    <string name="need_report_data">请选择上报记录</string>
    <string name="need_update_data">请选择修改记录</string>
    <string name="need_one_data">请选择一条数据进行修改</string>
    <string name="need_withdraw_data">请选择撤回记录</string>
    <string name="need_one_revoke_data">请选择一条数据进行撤回</string>
    <string name="need_check_data">请选择抽查记录</string>
    <string name="need_one_check_data">请选择一条数据进行抽查</string>
    <string name="need_look_data">请选择查看记录</string>
    <string name="need_jiaoyan_data">请选择一条数据进行校验</string>
    <string name="need_one_look_data">请选择一条数据进行查看</string>
    <string name="qualifie">合格</string>
    <string name="unqualified">不合格</string>
    <string name="wait">请稍等</string>
    <string name="wait_update">正在更新数据，请稍等...</string>
    <string name="is_reporting">正在上报数据中，请稍等...</string>
    <string name="is_deleting">正在删除数据中，请稍等...</string>
    <string name="is_jiaoyan">正在校验数据中，请稍等...</string>
    <string name="is_updating">正在修改数据中，请稍等...</string>
    <string name="is_approving">正在审核数据中，请稍等...</string>
    <string name="is_reworking">正在撤回数据中，请稍等...</string>
    <string name="tip">提示</string>
    <string name="save_tip">本记录还未保存，是否先保存本记录？</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="need_input_1_s">请填写%1$s</string>
    <string name="takePhoto">拍照</string>
    <string name="need_input_weldNum">请输入焊口编号</string>
    <string name="need_input_stakeNumber">请输入桩号</string>
    <string name="cExcavationCross_photoPath">图片地址</string>
    <string name="cInsulation_address">具体地址</string>
    <string name="cInsulation_manufacture">保温层生产厂家</string>
    <string name="cExcavationCross_remark">备注</string>
    <string name="cExcavationCross_active">激活状态</string>
    <string name="cExcavationCross_lastModifyTime">最后修改时间</string>
    <string name="cExcavationCross_lastModifyUserName">最后修改者名称</string>
    <string name="cExcavationCross_lastModifyUserId">最后修改者ID</string>
    <string name="cExcavationCross_createTime">创建时间</string>
    <string name="cExcavationCross_createUserName">创建者名称</string>
    <string name="cExcavationCross_createUserId">创建者ID</string>
    <string name="cExcavationCross_id">主键ID</string>
    <string name="cExcavationCross_approveStatus">审批状态</string>
    <string name="cExcavationCross_source">数据来源</string>
    <string name="cExcavationCross_projectNumber">项目</string>
    <string name="cExcavationCross_pipelineNumber">子项目</string>
    <string name="cExcavationCross_sectionNumber">标段</string>
    <string name="cExcavationCross_unit">单元</string>
    <string name="cExcavationCross_function">功能区</string>
    <string name="cExcavationCross_crossingNumber">穿越编号</string>
    <string name="cExcavationCross_crossingDescription">分部工程编码</string>
    <string name="cExcavationCross_crossingDepartment">穿跨越名称</string>
    <string name="cExcavationCross_length">穿跨越编码</string>
    <string name="cExcavationCross_crossingMaxDepth">类别</string>
    <string name="cExcavationCross_startStakeNumber">起始桩号</string>
    <string name="cExcavationCross_startRelativeMileage">相对起始桩距离(m)</string>
    <string name="cExcavationCross_endStakeNumber">结束桩号</string>
    <string name="cExcavationCross_endRelativeMileage">相对结束桩距离(m)</string>
    <string name="cExcavationCross_startX">起始点东坐标</string>
    <string name="cExcavationCross_startY">起始点北坐标</string>
    <string name="cExcavationCross_startZ">起始点高程</string>
    <string name="cExcavationCross_endX">结束点东坐标</string>
    <string name="cExcavationCross_endY">结束点北坐标</string>
    <string name="cExcavationCross_endZ">结束点高程</string>
    <string name="cExcavationCross_steadyTubeMeasures">开挖方式</string>
    <string name="cExcavationCross_crosslength">穿越长度</string>
    <string name="cExcavationCross_commencementDate">开工日期</string>
    <string name="cExcavationCross_completionDate">完工日期</string>
    <string name="cExcavationCross_constructionUnitId">施工单位</string>
    <string name="cExcavationCross_supervisionUnitId">监理单位</string>
    <string name="cExcavationCross_collectionPerson">采集人员</string>
    <string name="cExcavationCross_supervisionEngineer">监理工程师</string>
    <string name="cExcavationCross_collectionDate">采集日期</string>
    <string name="cExcavationCross_crossingName">功能区</string>
    <string name="cExcavationCross_sectionName">标段名称</string>
    <string name="cExcavationCross_pipelineName">子项目</string>
    <string name="cExcavationCross_projectName">项目</string>
    <string name="cHddCross_source">数据来源</string>
    <string name="cHddCross_approveStatus">审批状态</string>
    <string name="cHddCross_photoPath">图片地址</string>
    <string name="cHddCross_remark">备注</string>
    <string name="cHddCross_id">主键ID</string>
    <string name="cHddCross_active">激活状态</string>
    <string name="cHddCross_createUserName">创建者名称</string>
    <string name="cHddCross_createTime">创建时间</string>
    <string name="cHddCross_lastModifyUserId">最后修改者ID</string>
    <string name="cHddCross_lastModifyUserName">最后修改者名称</string>
    <string name="cHddCross_lastModifyTime">最后修改时间</string>
    <string name="cHddCross_createUserId">创建者ID</string>
    <string name="cHddCross_projectNumber">项目</string>
    <string name="cHddCross_pipelineNumber">子项目</string>
    <string name="cHddCross_sectionNumber">标段</string>
    <string name="cHddCross_crossingNumber">功能区</string>
    <string name="cHddCross_unitNumber">单元</string>
    <string name="cHddCross_crossingDescription">分部工程编码</string>
    <string name="cHddCross_crossingDepartment">穿跨越编码</string>
    <string name="cHddCross_length">穿跨越名称</string>
    <string name="cHddCross_crossingMaxDepth">类别</string>
    <string name="cHddCross_startStakeNumber">起始桩号</string>
    <string name="cHddCross_startRelativeMileage">相对起始桩距离(m)</string>
    <string name="cHddCross_endStakeNumber">结束桩号</string>
    <string name="cHddCross_endRelativeMileage">相对结束桩距离(m)</string>
    <string name="cHddCross_penetrationX">起始点东坐标</string>
    <string name="cHddCross_penetrationY">起始点北坐标</string>
    <string name="cHddCross_excavatedX">结束点东坐标</string>
    <string name="cHddCross_excavatedY">结束点北坐标</string>
    <string name="cHddCross_penetrationAngle">监理工程师</string>
    <string name="cHddCross_excavatedAngle">监理单位</string>
    <string name="cHddCross_commencementDate">开工日期</string>
    <string name="cHddCross_completionDate">完工日期</string>
    <string name="cHddCross_constructionUnitId">施工单位</string>
    <string name="cHddCross_supervisionUnitId">监理单位</string>
    <string name="cHddCross_collectionPerson">采集人员</string>
    <string name="cHddCross_supervisionEngineer">监理工程师</string>
    <string name="cHddCross_collectionDate">采集日期</string>
    <string name="cHddCross_sectionName">标段</string>
    <string name="cHddCross_pipelineName">子项目</string>
    <string name="cHddCross_projectName">项目</string>
    <string name="cWeld_sectionNumber">标段编码</string>
    <string name="cWeld_weldNum">焊口编号</string>
    <string name="cWeld_stakeNumber">桩号</string>
    <string name="cWeld_weldingUnitName">施工机组名称</string>
    <string name="search_result">撤回</string>
    <string name="look">查看</string>
    <string name="random_check">抽查</string>
    <string name="random_jioayan">校验</string>
</resources>