<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_bt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:orientation="horizontal">

            <Button
                android:id="@+id/report"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_marginRight="@dimen/padding_lv2"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:text="@string/report"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2" />
            <Button
                android:id="@+id/query"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_marginRight="@dimen/padding_lv2"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:visibility="gone"
                android:text="@string/query"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2" />

            <Button
                android:id="@+id/update"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_marginRight="@dimen/padding_lv2"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:text="@string/update"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2" />

            <Button
                android:id="@+id/del"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_marginLeft="@dimen/padding_lv2"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:text="@string/del"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2" />

            <Button
                android:id="@+id/widthdraw"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_marginLeft="@dimen/padding_lv2"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:text="@string/search_result"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2"
                android:visibility="gone" />

            <Button
                android:id="@+id/approve"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:text="@string/approved"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2"
                android:visibility="gone" />

            <Button
                android:id="@+id/look"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_marginLeft="@dimen/padding_lv2"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:text="@string/look"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2"
                android:visibility="gone" />

            <Button
                android:id="@+id/random_check"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_marginLeft="@dimen/padding_lv2"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:text="@string/random_check"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2"
                android:visibility="gone" />
            <Button
                android:id="@+id/random_jiaoyan"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/bt_small_size_height"
                android:layout_marginLeft="@dimen/padding_lv2"
                android:layout_weight="1"
                android:background="@drawable/button_gray_line_conner_white_bg"
                android:focusable="false"
                android:text="@string/random_jioayan"
                android:textColor="@color/black_light_e"
                android:textSize="@dimen/tv_2"
                android:visibility="gone" />


        </LinearLayout>
    </LinearLayout>
</layout>