<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:background="@color/blue"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_class_bottom_layout_xml"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/waiting"
                    android:textColor="@color/radio_class"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_class_bottom_layout_xml"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/reported"
                    android:textColor="@color/radio_class"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/rb3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_class_bottom_layout_xml"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/approve"
                    android:textColor="@color/radio_class"
                    android:textSize="18sp" />
                <RadioButton
                    android:id="@+id/rb4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_class_bottom_layout_xml"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/jiaoyan"
                    android:textColor="@color/radio_class"
                    android:textSize="18sp" />
                <RadioButton
                    android:id="@+id/rb5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/radio_class_bottom_layout_xml"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/all"
                    android:textColor="@color/radio_class"
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

        </FrameLayout>
    </LinearLayout>
</layout>
